# ExerciseCollection

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: Linux.yml  Windows.yml  windows.yml
cmake/: graphviz.cmake
docs/pages/: main.md
src/: CMakeLists.txt  Cryptography.cpp  DataSerialization.cpp  DataStructures.cpp  DesignPatternProblems.cpp  LanguageFeatures.cpp  Logger.cpp  MathProblems.cpp  Network.cpp  RegexProblems.cpp  StringProblems.cpp  task1.cpp
src/include/ExerciseCollection/: Cryptography.hpp  DataSerialization.hpp  DataStructures.hpp  DesignPatternProblems.hpp  LanguageFeatures.hpp  Logger.hpp  MathProblems.hpp  Network.hpp  RegexProblems.hpp  StringProblems.hpp
test/: CMakeLists.txt  Cryptography.cpp  DataSerialization.cpp  DataStructures.cpp  DesignPatternProblems.cpp  LanguageFeatures.cpp  Logger.cpp  MathProblems.cpp  Network.cpp  RegexProblems.cpp  StringProblems.cpp
